--- a/backend/sportgather/src/main/resources/application.properties
+++ b/backend/sportgather/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/411Project?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=lbjUIUC1314520!
