--- a/frontend/material-tailwind-kit-react-main/package.json
+++ b/frontend/material-tailwind-kit-react-main/package.json
@@ -9,11 +9,14 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^13.1.9",
+    "ali-react-table": "^2.6.1",
     "axios": "^0.24.0",
+    "cors": "^2.8.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "url-loader": "^4.1.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
