--- a/backend/sportgather/src/main/resources/application.properties
+++ b/backend/sportgather/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/411Project?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=lbjUIUC1314520!
+spring.datasource.password= 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
